--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,13 @@
 			<version>4.13.2</version>
 			<scope>test</scope>
 		</dependency>
-			
+		
+		<dependency>
+			<groupId>com.fasterxml.jackson.jaxrs</groupId>
+			<artifactId>jackson-jaxrs-json-provider</artifactId>
+			<version>2.11.0</version>
+		</dependency>
+	
 	</dependencies>
 
 	<build>
@@ -84,7 +90,7 @@
 				<artifactId>maven-resources-plugin</artifactId>
 				<version>3.1.0</version>
 			</plugin>
-
+			
 		</plugins>
 	</build>
 
