Validadores Cnpj e CPF. Cadastro de pessoa fisica.

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -21,6 +21,9 @@ server.compression.enabled=true
 server.compression.mime-types=text/html,text/xml,text/plain,text/css,text/javascript,application/javascript,application/json
 server.compression.min-response-size=1024
 server.http2.enabled=true
+server.error.include-stacktrace=on-param
+server.error.include-stacktrace-parameter=debug
+
 
 spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
